# ChangeLog for dev-db/mysql
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/ChangeLog,v 1.438 2008/01/25 08:55:32 robbat2 Exp $

  25 Jan 2008; Robin H. Johnson <robbat2@gentoo.org> mysql-5.0.54.ebuild:
  Bump the mysql-extras.

*mysql-5.0.54 (15 Jan 2008)

  15 Jan 2008; Robin H. Johnson <robbat2@gentoo.org> +mysql-5.0.54.ebuild:
  Add MySQL-5.0.54 to the tree. Unlike some of the intervening releases, this
  one actually works and passes both the testsuite and my own tests.

  18 Nov 2007; Markus Rothe <corsair@gentoo.org> mysql-5.0.44-r2.ebuild:
  Stable on ppc64; bug #198988

  18 Nov 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  mysql-5.0.44-r2.ebuild:
  ppc stable, bug #198988

  17 Nov 2007; Raúl Porcel <armin76@gentoo.org> mysql-5.0.44-r2.ebuild:
  alpha/ia64 stable wrt security #198988

  16 Nov 2007; Robin H. Johnson <robbat2@gentoo.org> mysql-5.0.44-r2.ebuild:
  Stable on amd64 per bug 198988, tested by me, approved by KingTaco.

  16 Nov 2007; Jurek Bartuszek <jurek@gentoo.org> mysql-5.0.44-r2.ebuild:
  x86 stable (bug #198988)

  16 Nov 2007; Jeroen Roovers <jer@gentoo.org> mysql-5.0.44-r2.ebuild:
  Stable for HPPA (bug #198988).

  16 Nov 2007; Ferris McCormick <fmccor@gentoo.org> mysql-5.0.44-r2.ebuild:
  Sparc stable --- Security Bug #198988 --- looks good to me.

*mysql-5.0.44-r2 (16 Nov 2007)

  16 Nov 2007; Robin H. Johnson <robbat2@gentoo.org>
  +mysql-5.0.44-r2.ebuild:
  Fix for bug #198988, DoS with InnoDB. Also fixes upstream TMPDIR bug 30287.

  08 Nov 2007; Raúl Porcel <armin76@gentoo.org> mysql-5.0.44-r1.ebuild:
  alpha/ia64/x86 stable

  28 Jul 2007; Steve Dibb <beandog@gentoo.org> mysql-5.0.44-r1.ebuild:
  amd64 stable, security bug 185333

  17 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  mysql-5.0.44-r1.ebuild:
  Stable on sparc wrt security #185333

  16 Jul 2007; Jeroen Roovers <jer@gentoo.org> mysql-5.0.44-r1.ebuild: