@@ -86,14 +86,14 @@ EBUILD mysql-5.0.44.ebuild 2421 RMD160 818b644ac5d77a7b103263f4c4763edd11dbbd06 
 MD5 6cfbec60b5fe94da511d08d3dda8bf55 mysql-5.0.44.ebuild 2421
 RMD160 818b644ac5d77a7b103263f4c4763edd11dbbd06 mysql-5.0.44.ebuild 2421
 SHA256 43f1119475c02fa856a6b038c9c7318cce5adce8ed4514485b98088db7fa423a mysql-5.0.44.ebuild 2421
-EBUILD mysql-5.0.54.ebuild 2079 RMD160 a112108f2a871a7ba0e6c202f3ef9a3403e9f44b SHA1 2e07916259e49bd96a36889316f078a232291fbe SHA256 b6c6f0951269a1c01927c86d703d10e58ea536586665db05091373028b6d6f71
-MD5 5ec5b262c122b55624fc48299dcf5de5 mysql-5.0.54.ebuild 2079
-RMD160 a112108f2a871a7ba0e6c202f3ef9a3403e9f44b mysql-5.0.54.ebuild 2079
-SHA256 b6c6f0951269a1c01927c86d703d10e58ea536586665db05091373028b6d6f71 mysql-5.0.54.ebuild 2079
-MISC ChangeLog 85323 RMD160 af3dae5b92fc0029cb64768b694647c9b5091c8c SHA1 aabc6b1c5a9c82223137be9119bf6bb5ce4728b6 SHA256 1d4385cc837c09137d37eb6c3ccd6d3f869f036a4f43613ca8dc3c7112ba2642
-MD5 3e530b8ecdde61d7f2044cb1bbe12b21 ChangeLog 85323
-RMD160 af3dae5b92fc0029cb64768b694647c9b5091c8c ChangeLog 85323
-SHA256 1d4385cc837c09137d37eb6c3ccd6d3f869f036a4f43613ca8dc3c7112ba2642 ChangeLog 85323
+EBUILD mysql-5.0.54.ebuild 2245 RMD160 30af43e4b87cc7a46696074a1105380e71069074 SHA1 3e9ac031fb63995692fb3b47a8e4e1fbf1aa9317 SHA256 a713dc5b31a31c18199b888835d68ac7956ab64dde8b2b1df696a3dce63c3b4f
+MD5 e21f7271da0f9185fdb71db700520375 mysql-5.0.54.ebuild 2245
+RMD160 30af43e4b87cc7a46696074a1105380e71069074 mysql-5.0.54.ebuild 2245
+SHA256 a713dc5b31a31c18199b888835d68ac7956ab64dde8b2b1df696a3dce63c3b4f mysql-5.0.54.ebuild 2245
+MISC ChangeLog 85439 RMD160 f037753abea6e786d8a1224e1259b61120f37db4 SHA1 75bc8c993f0ec42441a6cb095eb3aac92a346db7 SHA256 d59c7eadeb50302ccc31db34a0262af4aaa1a01f88ed993e13c35412aba95529
+MD5 b93fb05158656075fb54510da2f81e75 ChangeLog 85439
+RMD160 f037753abea6e786d8a1224e1259b61120f37db4 ChangeLog 85439
+SHA256 d59c7eadeb50302ccc31db34a0262af4aaa1a01f88ed993e13c35412aba95529 ChangeLog 85439
 MISC metadata.xml 159 RMD160 a50a94af7706288c46f81d6c3da9b5f888050eee SHA1 5eb253a678d6faa0f1c6b3c5720a804ed8923566 SHA256 5cfd5aa0e8104c0326b5f4c9205a6449a94e0f6f6abfd2626f1e7a8fe77b98b7
 MD5 f1c86d989c7ea2451931e7e2c3530f8c metadata.xml 159
 RMD160 a50a94af7706288c46f81d6c3da9b5f888050eee metadata.xml 159
