@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/mysql
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/ChangeLog,v 1.438 2008/01/25 08:55:32 robbat2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-db/cvs-repo/gentoo-x86/dev-db/mysql/ChangeLog,v 1.439 2008/01/25 22:54:55 robbat2 Exp $
+
+  25 Jan 2008; Robin H. Johnson <robbat2@gentoo.org> mysql-5.0.54.ebuild:
+  Disable the subselect testcase on x86.
 
   25 Jan 2008; Robin H. Johnson <robbat2@gentoo.org> mysql-5.0.54.ebuild:
   Bump the mysql-extras.
